--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,6 +41,10 @@
     "./schemas": {
       "types": "./dist/schemas/index.d.ts",
       "import": "./dist/schemas/index.js"
+    },
+    "./mcp": {
+      "types": "./dist/mcp/index.d.ts",
+      "import": "./dist/mcp/index.js"
     }
   },
   "scripts": {
@@ -53,7 +57,11 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.0.0",
     "zod": "^3.22.4"
+  },
+  "bin": {
+    "humanizer-mcp": "./dist/mcp/index.js"
   },
   "devDependencies": {
     "typescript": "^5.3.0",
